--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,13 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: nightly
-        target: aarch64-skyline-switch
-        components: rust-src
-        override: true
+    - name: Install Rust toolchain
+  uses: actions-rs/toolchain@v1
+  with:
+    profile: minimal
+    toolchain: nightly
+    target: aarch64-skyline-switch
+    override: true
 
     - name: Install cargo-skyline
       run: cargo install cargo-skyline
